--- a/requirements.txt
+++ b/requirements.txt
@@ -81,7 +81,7 @@ itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.4.2
-jose==1.0.0
+python-jose
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyterlab_widgets==3.0.13
