--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ ENCRYPTION_KEY=CxaHSPCZH1qcsrw7pUf-Zy0ZPdxr3g8rprpB7qM-fto=
 SMTP_SERVER=smtp.gmail.com
 EMAIL_FROM=ahow0166@gmail.com
 SMTP_PORT=587
+USE_MOCK_MT5=true
